<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.AppTheme.BottomSheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_padding">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/aciv_image_user_detail"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:layout_marginTop="@dimen/default_marginTop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_first_name_user_detail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:layout_marginTop="@dimen/default_marginTop"
        android:hint="@string/first_name_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/aciv_image_user_detail"
        app:layout_constraintTop_toTopOf="@id/aciv_image_user_detail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_first_name_user_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            tools:text="Sergio" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_last_name_user_detail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:layout_marginTop="@dimen/default_marginTop"
        android:hint="@string/last_name_hint"
        app:layout_constraintBottom_toBottomOf="@id/aciv_image_user_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/aciv_image_user_detail"
        app:layout_constraintTop_toBottomOf="@id/til_first_name_user_detail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_last_name_user_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            tools:text="Martínez" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email_user_detail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:layout_marginTop="@dimen/default_vertical_margin"
        android:hint="@string/email_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aciv_image_user_detail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_email_user_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="fakeemail@guugle.com" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_register_date_user_detail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:layout_marginTop="@dimen/default_vertical_margin"
        android:hint="@string/date_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_email_user_detail"
        app:layout_constraintEnd_toStartOf="@id/til_gender_user_detail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_register_date_user_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="0000/00/00" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_gender_user_detail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:layout_marginTop="@dimen/default_vertical_margin"
        android:hint="@string/gender_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_email_user_detail"
        app:layout_constraintStart_toEndOf="@id/til_register_date_user_detail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_gender_user_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Male" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_street_user_detail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/default_vertical_margin"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:hint="@string/street_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_register_date_user_detail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_street_user_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Fake Street 123" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_state_user_detail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:layout_marginTop="@dimen/default_vertical_margin"
        android:hint="@string/state_hint"
        app:layout_constraintEnd_toStartOf="@id/til_city_user_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_street_user_detail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_state_user_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Barcelona" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_city_user_detail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:layout_marginTop="@dimen/default_vertical_margin"
        android:hint="@string/city_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/til_state_user_detail"
        app:layout_constraintTop_toBottomOf="@id/til_street_user_detail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_city_user_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Barcelona" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_delete_user_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_vertical_margin"
        android:text="@string/user_detail_delete_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_state_user_detail" />


</androidx.constraintlayout.widget.ConstraintLayout>